--- a/configure.in
+++ b/configure.in
@@ -56,8 +56,9 @@ if test "$GCC" = "yes"; then
 	CFLAGS="$CFLAGS -Wall -Wextra -Wmissing-prototypes -O2"
 # We assume that gcc knows about -fvisibility and friends, as I can't see
 # a good easy way of testing for it here.
-	CFLAGS="$CFLAGS -DLT_BUILDING_DLL=1"
-	CFLAGS="$CFLAGS -fvisibility=hidden -fvisibility-inlines-hidden"
+	LIBCFLAGS="$CFLAGS"
+	LIBCFLAGS="$LIBCFLAGS -DLT_BUILDING_DLL=1"
+	LIBCFLAGS="$LIBCFLAGS -fvisibility=hidden"
 fi
 
 AC_PROG_LIBTOOL
@@ -303,6 +304,7 @@ AC_SUBST([LIBTRACE_MINOR])
 AC_SUBST([DAG_VERSION_NUM])
 AC_SUBST([HAVE_BPF_CAPTURE])
 AC_SUBST([HAVE_LIBGDC])
+AC_SUBST([LIBCFLAGS])
 dnl and finally, output our Makefiles
 AC_OUTPUT
 
