--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -888,7 +888,7 @@ typedef enum {
 	TRACE_OPTION_COMPRESSTYPE_NONE = 0, /**< No compression */
 	TRACE_OPTION_COMPRESSTYPE_ZLIB = 1, /**< GZip Compression */
 	TRACE_OPTION_COMPRESSTYPE_BZ2  = 2, /**< BZip2 Compression */
-	TRACE_OPTION_COMPRESSTYPE_LZO  = 3, /**< LZO Compression */
+	TRACE_OPTION_COMPRESSTYPE_LZO  = 3  /**< LZO Compression */
 } trace_option_compresstype_t;
 
 /** Valid configuration options for output traces */
@@ -899,7 +899,7 @@ typedef enum {
 	 * 9 = better compression */
 	TRACE_OPTION_OUTPUT_COMPRESS,
 	/** Compression type, see trace_option_compresstype_t */
-	TRACE_OPTION_OUTPUT_COMPRESSTYPE,
+	TRACE_OPTION_OUTPUT_COMPRESSTYPE
 } trace_option_output_t;
 
 /** Sets an output config option
