* Disabled strict aliasing for tracetop - dealing with sockaddrs is a pain if strict aliasing is on

--- a/tools/tracetop/Makefile.am
+++ b/tools/tracetop/Makefile.am
@@ -5,3 +5,4 @@ EXTRA_DIST = $(man_MANS)
 include ../Makefile.tools
 tracetop_SOURCES = tracetop.cc
 tracetop_LDADD = -lncurses 
+tracetop_CPPFLAGS = -fno-strict-aliasing $(AM_CFLAGS)
