* Detection of LLVM is no longer automatic - the user explicitly has to ask for it.  * Added rules to detect other necessary LLVM components, such as llvm-gcc and the boost libraries  * Since we check for llvm-gcc explicitly, we can avoid the assumption that it is in the same dir as llvm-config (which it isn't in some installs)

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -86,7 +86,7 @@ dagopts.c:
 if HAVE_LLVM
 # Rules to build the llvm .cc file from a C description of each opcode.
 bpf-jit/bpf-opcodes.llvm.bc: bpf-jit/bpf-opcodes.c
-	`$(LLVM_CONFIG) --bindir`/llvm-gcc -std=c99 -c -O0 -emit-llvm $< -o $@
+	$(LLVM_GCC) -std=c99 -c -O0 -emit-llvm $< -o $@
 
 bpf-jit/bpf-opcodes.llvm.cc: bpf-jit/bpf-opcodes.llvm.bc
 	`$(LLVM_CONFIG) --bindir`/llc -march=cpp -cppgen=module $< -o $@
