--- a/configure.in
+++ b/configure.in
@@ -299,18 +299,39 @@ AC_CHECK_LIB(lzo2, lzo1x_1_compress)
 AC_CHECK_LIB(pthread, pthread_create)
 AC_SEARCH_LIBS(mvprintw, ncurses, [], [ AC_MSG_ERROR([NCurses library not available]) ])
 
+
+# For now, the user has to explicitly ask for the LLVM stuff, as it's a bit
+# rough around the edges :(
 AC_ARG_WITH([llvm],
 	[AC_HELP_STRING([--with-llvm],
 		[support Just In Time compiler])],
 	use_llvm="yes",
-	use_llvm="check")
-
-AC_PATH_PROG(llvm_config, llvm-config)
+	use_llvm="no")
+JIT=no
 
 if (test "$use_llvm" != "no"); then
 	AC_PATH_PROG(LLVM_CONFIG, llvm-config, no)
-	if test "$LLVM_CONFIG" = "no" ; then
+
+	# XXX Hard coding the path is REALLY bad.
+	# llvm-gcc is installed in a stupid place in Debian / Ubuntu. Hard luck
+	# if you've installed it somewhere custom.
+	# Hopefully in future we can replace this with clang, which may or may
+	# not be installed somewhere intelligent.
+	AC_PATH_PROG(LLVM_GCC, llvm-gcc, no, /usr/lib/llvm/llvm/gcc-4.2/bin)
+
+	AC_LANG_PUSH([C++])
+	AC_CHECK_HEADERS([boost/lexical_cast.hpp], boost="yes", boost="no")
+	AC_LANG_POP([C++])
+
+		
+	if test "$boost" = "no"; then
+		AC_MSG_NOTICE([Unabled to find boost libraries.  JIT support disabled.])
+		JIT=no
+	elif test "$LLVM_CONFIG" = "no" ; then
 		AC_MSG_NOTICE([Unable to find llvm-config.  JIT support disabled.])
+		JIT=no
+	elif test "$LLVM_GCC" = "no"; then
+		AC_MSG_NOTICE([Unable to find llvm-gcc.  JIT support disabled.])
 		JIT=no
 	else
 		LIBCXXFLAGS="`$LLVM_CONFIG --cxxflags` $CXXFLAGS"
@@ -332,7 +353,7 @@ AM_CONDITIONAL([HAVE_BZLIB], [test "$ac_cv_lib_bz2_BZ2_bzDecompressInit" = yes])
 AM_CONDITIONAL([HAVE_LZO], [test "$ac_cv_lib_lzo2_lzo1x_1_compress" = yes])
 AM_CONDITIONAL([HAVE_NETPACKET_PACKET_H], [test "$libtrace_netpacket_packet_h" = true])
 AM_CONDITIONAL([HAVE_LIBGDC], [test "$ac_cv_header_gdc_h" = yes])
-AM_CONDITIONAL([HAVE_LLVM], [test "x$LLVM_CONFIG" != "xno" ])
+AM_CONDITIONAL([HAVE_LLVM], [test "x$JIT" != "xno" ])
 
 # Check for miscellaneous programs
 AC_CHECK_PROG([libtrace_doxygen], [doxygen], [true], [false])
