--- a/configure.in
+++ b/configure.in
@@ -9,6 +9,11 @@ LIBTRACE_MAJOR=3
 LIBTRACE_MID=0
 LIBTRACE_MINOR=7
 
+# OpenSolaris hides libraries like libncurses in /usr/gnu/lib, which is not
+# searched by default - add it to LDFLAGS so we at least have a chance of 
+# finding it
+LDFLAGS+=" -L/usr/gnu/lib"
+
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR(lib/trace.c)
 AM_INIT_AUTOMAKE
