--- a/configure.in
+++ b/configure.in
@@ -12,7 +12,9 @@ LIBTRACE_MINOR=7
 # OpenSolaris hides libraries like libncurses in /usr/gnu/lib, which is not
 # searched by default - add it to LDFLAGS so we at least have a chance of 
 # finding it
-LDFLAGS+=" -L/usr/gnu/lib"
+if test -d "/usr/gnu/lib"; then
+	LDFLAGS+=" -L/usr/gnu/lib"
+fi
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR(lib/trace.c)
