--- a/tools/tracetop/Makefile.am
+++ b/tools/tracetop/Makefile.am
@@ -1,8 +1,11 @@
+if HAVE_NCURSES
 bin_PROGRAMS = tracetop
 man_MANS = tracetop.1
 EXTRA_DIST = $(man_MANS)
 
 include ../Makefile.tools
+
 tracetop_SOURCES = tracetop.cc
 tracetop_LDADD = -lncurses 
 tracetop_CPPFLAGS = -fno-strict-aliasing $(AM_CFLAGS)
+endif
