--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -75,6 +75,9 @@ BIN_PROTOCOLS+=eth_34916.la
 # 802.1x
 BIN_PROTOCOLS+=eth_34958.la
 
+# IPv6
+BIN_PROTOCOLS+=eth_34525.la
+
 # IP Protocol decoders
 # ICMP
 BIN_PROTOCOLS+=ip_1.la
@@ -85,7 +88,7 @@ BIN_PROTOCOLS+=ip_17.la
 # DCCP
 BIN_PROTOCOLS+=ip_33.la 
 # IPv6
-TXT_PROTOCOLS+=ip_41.protocol
+BIN_PROTOCOLS+=ip_41.la
 # GRE
 BIN_PROTOCOLS+=ip_47.la
 # ICMP6
@@ -116,13 +119,17 @@ eth_33024_la_LDFLAGS=-module
 eth_34887_la_LDFLAGS=-module
 eth_34916_la_LDFLAGS=-module
 eth_34958_la_LDFLAGS=-module
+eth_34525_la_LDFLAGS=-module
 
 ip_1_la_LDFLAGS=-module
 ip_6_la_LDFLAGS=-module
 ip_17_la_LDFLAGS=-module
 ip_33_la_LDFLAGS=-module
+ip_41_la_LDFLAGS=-module
 ip_47_la_LDFLAGS=-module
 ip_132_la_LDFLAGS=-module
+
+ip_41_la_SOURCES=eth_34525.c
 
 libpacketdump_la_SOURCES = libpacketdump.cc \
 			lexer.l parser.y bitbuffer.c bitbuffer.h grammar.h
@@ -149,4 +156,4 @@ install-exec-hook:
 	$(AM_V_GEN)mkdir -p $(DESTDIR)$(plugindir)
 	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so ppp_33.so
 	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so link_5.so
-	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f ip_41.protocol eth_34525.protocol
+	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_34525.protocol
