--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -87,8 +87,6 @@ BIN_PROTOCOLS+=ip_6.la
 BIN_PROTOCOLS+=ip_17.la
 # DCCP
 BIN_PROTOCOLS+=ip_33.la 
-# IPv6
-BIN_PROTOCOLS+=ip_41.la
 # GRE
 BIN_PROTOCOLS+=ip_47.la
 # ICMP6
@@ -125,11 +123,9 @@ ip_1_la_LDFLAGS=-module
 ip_6_la_LDFLAGS=-module
 ip_17_la_LDFLAGS=-module
 ip_33_la_LDFLAGS=-module
-ip_41_la_LDFLAGS=-module
 ip_47_la_LDFLAGS=-module
 ip_132_la_LDFLAGS=-module
 
-ip_41_la_SOURCES=eth_34525.c
 
 libpacketdump_la_SOURCES = libpacketdump.cc \
 			lexer.l parser.y bitbuffer.c bitbuffer.h grammar.h
@@ -156,4 +152,4 @@ install-exec-hook:
 	$(AM_V_GEN)mkdir -p $(DESTDIR)$(plugindir)
 	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so ppp_33.so
 	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so link_5.so
-	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_34525.protocol
+	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_34525.so ip_41.so
